[tool.poetry]
name = "litestar-sqlalchemy-MRE"
version = "0.1.0"
description = "It is minimal reproduced example for using litestar 2.0a, sqlalchemy 2.0.4(or above)."
authors = ["Ben Luo <benluo@gmail.com>"]
license = "GPL2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
litestar = "^2.0.0a5"
pydantic = "^1.10.4"
aiosqlite = "^0.19.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipython = "^8.12.0"
ruff = "^0.0.262"
importlib-metadata = "^4.13.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
